# mycobot_ws

./: .gitignore  README.md  build.sh  send_goal.py
airlab_cobot/: CMakeLists.txt
airlab_cobot/config/: my_cobot.db
airlab_cobot/launch/: db_ik.launch.py  gui.launch.py
airlab_cobot/src/: airlab_cobot_qt_control.cpp  mainwindow.ui
db_ik/: package.xml  setup.py  test_init.py
db_ik/config/: db_ik.rviz
db_ik/db_ik/: mycobot_node.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/db_ik/share/db_ik/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
mycobot_280/mycobot_280/config/: mycobot.rviz
mycobot_280/mycobot_280_moveit2/config/: joint_limits.yaml
mycobot_280/mycobot_280_moveit2_control/mycobot_280_moveit2_control/: sync_plan.py
mycobot_communication/mycobot_communication/: mycobot_services.py  mycobot_topics_jsnn.py  mycobot_topics_pi.py  mycobot_topics_seeed.py
src/airlab_cobot/: package.xml
src/airlab_cobot/config/: my_cobot.db
src/airlab_cobot/include/: database.h  mainwindow.h
src/airlab_cobot/src/: mainwindow.cpp
src/db_ik/: setup.cfg  test_joy_logic.py
src/db_ik/db_ik/: joy_behaviors.py  mycobot_node.py
src/db_ik/db_ik/bak/: joy_behaviors.py  mycobot_node.py
src/mycobot_280/mycobot_280/launch/: slider_control.launch.py  slider_control_camera_flange.launch.py  slider_control_pump.launch.py
src/mycobot_280/mycobot_280_moveit2/config/: moveit.rviz
src/mycobot_280/mycobot_280_moveit2_control/mycobot_280_moveit2_control/: sync_plan_arduino.py
src/mycobot_communication/mycobot_communication/: mycobot_topics.py
src/mycobot_description/: setup.py
